# try_dylib

./: App.java  app.cpp  build.sh  caller.cpp  f1.cpp  f2.cpp  in.txt  in_rust.txt  run.sh
rust-caller/: Cargo.toml  HelloWorld.java
rust_f3/: Cargo.toml  build.sh  run.sh
rust_f3/src/: lib.rs  real.rs
