[package]
name = "rust_f3"
version = "0.1.0"
authors = ["Hamlet Lee <lisining@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://docs.rs/libc/0.2.66/libc/
# https://rust-lang.github.io/libc/#platform-specific-documentation
libc = "0.2"
lazy_static = "1.4"

[lib]
crate_type = ["cdylib"]
